--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </nav>
 
             <div class="header-text">
-                <p>Mobile App Developer</p>
+                <p>Web & App Developer</p>
                 <h1>Hi, I'm Sai <br> <span style="color: rgb(192, 183, 21);">Koushik</span> from Chennai</h1>
             </div>
         </div>
@@ -46,7 +46,7 @@
                 <div class="about-col2">
                     <h2 class="sub-title">About Me</h2>
 
-                    <p>I'm a passionate coder and I have intermediate experience in Android app development and Front-end web development pursuing Computer Science and Engineering at Chennai Institute of Technology with experience in Android app development with a strong problem solving skills.</p>
+                    <p>I'm a passionate coder and I have intermediate experience in Android app development and Full stack web development pursuing Computer Science and Engineering at Chennai Institute of Technology with experience in Android app development with a strong problem solving skills.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
